# peril

./: .gitignore  LICENSE  README.md  index.html
build_data/: anki-1552733819.db
category_data/: data.hiragana.lang.jp.txt  data.kanji.lang.jp.txt  data.katakana.lang.jp.txt  data.phrases.lang.fr.txt  data.sentences.lang.jp.txt  data.verb_vocabulary.lang.fr.txt  data.vocab_adjectives.lang.fr.txt  data.vocab_nouns.lang.fr.txt  data.words.lang.jp.txt  manifest.json  manifest.lang.fr.json  manifest.lang.jp.json
cpp_src/: CMakeLists.txt  compile.sh  fetch_data_LANG_FR.cpp  fetch_data_LANG_FR.hpp  fetch_data_LANG_JP.cpp  fetch_data_LANG_JP.hpp  fetch_data_LANG_TEMPLATE.cpp  fetch_data_LANG_TEMPLATE.hpp  main.cpp  multi.h  stdfunctions.cpp  stdfunctions.hpp  urlapi.h
cpp_src/libcurl_headers/: CMakeLists.txt
web_src/: custom.css  custom.js
